Revision history for {{$dist->name}}

{{$NEXT}}

0.01001713 2010-06-03 09:04:31 Pacific/Auckland

        Re-attempted release of 0.01001712 
        except with a (hopefully) working .netrc so 
        the twitter thing Actually Works(TM).

0.01001712 2010-06-03 08:54:05 Pacific/Auckland

        Added Dist::Zilla::Plugin::Twitter to the chain.

0.01000600 2010-05-22 20:33:14 Pacific/Auckland
          First version.
